Add GitHub workflow used to publish early access builds Remove the ability to manually fire the `release` workflow
Signed-off-by: ApexModder <robsonlawson3@gmail.com>

--- a/.github/workflows/pre_release.yml
+++ b/.github/workflows/pre_release.yml
@@ -1,9 +1,9 @@
-name: release
+name: pre_release
 
 on:
   push:
     tags:
-      - v*
+      - pv*
 
 jobs:
   publish:
@@ -18,9 +18,6 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
-
-      - name: Unshallow Repository
-        run: git fetch --prune --unshallow
 
       - name: Read Properties
         uses: christian-draeger/read-properties@1.0.1
@@ -60,12 +57,6 @@ jobs:
       - name: Generate Mod Data & Asset Files
         run: ./gradlew data
 
-      - name: Generate Changelog File
-        run: ./gradlew gitChangelogTask
-        env:
-          GENERATE_CHANGELOG: true
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Build Mod JARs
         run: ./gradlew build
 
@@ -75,36 +66,14 @@ jobs:
           name: Mod-Jars
           path: ./build/libs
 
-      - name: Upload Changelog to GitHub Actions
-        uses: actions/upload-artifact@v3
-        with:
-          name: Changelog
-          path: ./CHANGELOG.md
-
-      - name: Publish Mod to Maven
-        run: ./gradlew publish
-        env:
-          APEX_MODS_MAVEN_USERNAME: ${{ secrets.APEX_MODS_MAVEN_USERNAME }}
-          APEX_MODS_MAVEN_PASSWORD: ${{ secrets.APEX_MODS_MAVEN_PASSWORD }}
-
-      - name: Publish Mod to CurseForge
-        run: ./gradlew curseforge
-        env:
-          CURSEFORGE_TOKEN: ${{ secrets.CURSEFORGE_TOKEN }}
-
-      - name: Publish Mod to Modrinth
-        run: ./gradlew modrinth
-        env:
-          MODRINTH_TOKEN: ${{ secrets.MODRINTH_TOKEN }}
-
       - name: Send Version Release Announcement Messages
         uses: appleboy/discord-action@0.0.3
         with:
-          webhook_id: ${{ secrets.DISCORD_WEBHOOK_ID }}
-          webhook_token: ${{ secrets.DISCORD_WEBHOOK_TOKEN }}
+          webhook_id: ${{ secrets.DISCORD_PRE_RELEASE_WEBHOOK_ID }}
+          webhook_token: ${{ secrets.DISCORD_PRE_RELEASE_WEBHOOK_TOKEN }}
           color: '#97C6E7'
-          file: ./CHANGELOG.md
-          message: "Fantasy's Furniture has been updated to v**_${{ steps.mod_version.outputs.value }}_** for **Minecraft** **_1.16.5_**!"
+          file: './build/libs/fantasyfurniture-1.16.5-${{ steps.mod_version.outputs.value }}.jar'
+          message: "Early version of **Fantasy's Furniture** v**_${{ steps.mod_version.outputs.value }}_** (**Minecraft** **_1.16.5_**) is available."
 
       - name: Stop Gradle Deamons
         run: ./gradlew --stop
