--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,18 +1,18 @@
 modLoader="javafml"
 loaderVersion="${forge_version_range}"
 license="GNU General Public License v3.0"
-issueTrackerURL="https://github.com/ApexModder/FantasyFurniture/issues"
+issueTrackerURL="${mod_git_url}/issues"
 
 [[mods]]
 	modId="${mod_id}"
 	version="${mod_version}"
 	displayName="${mod_name}"
-	updateJSONURL="https://raw.githubusercontent.com/ApexModder/Version/master/fantasyfurniture.json"
+	updateJSONURL="https://raw.githubusercontent.com/ApexStudios-Dev/Version/master/fantasyfurniture.json"
 	displayURL="https://www.curseforge.com/minecraft/mc-mods/fantasys-furniture"
-	# logoFile="banner.png"
-	# credits=""
+	logoFile="banner.png"
+	credits="Apex - Programming, FantasyGaming - Texture Artist"
 	authors="${mod_authors}"
-	description=""
+	description="Mod requested by Fantasy which adds varying sets of furniture to your Minecraft world."
 
 [[dependencies.${mod_id}]]
 	modId="forge"
