Improve build script
Signed-off-by: ApexModder <robsonlawson3@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -179,16 +179,15 @@ task sourcesJar(type: Jar, dependsOn: classes) {
 
 task deobfJar(type: Jar) {
 	classifier 'deobf'
-	from sourceSets.main.output
 	exclude '**/*bbmodel'
+	from sourceSets.main.output
 }
 
 jar {
 	classifier 'slim'
-
+	exclude '**/*bbmodel'
 	from sourceSets.main.output.classesDirs
 	from sourceSets.main.output.resourcesDir
-	exclude '**/*bbmodel'
 }
 
 shadowJar {
@@ -215,26 +214,38 @@ artifacts {
 }
 
 if(System.getenv('GENERATE_CHANGELOG') != null) {
-    def previousGitTag = { ->
-        def code = new ByteArrayOutputStream()
+	def previousGitTag
+	def prefix = 'v'
+	def suffix = ''
 
-        exec {
-            commandLine 'git', 'describe', '--tags', '--match', 'v*', '--exclude', "v${mod_version}"
-            standardOutput code
-        }
+	if(mod_release_type == 'prerelease') {
+		prefix = 'pv'
+	} else if(mod_release_type == 'alpha' || mod_release_type == 'beta') {
+		suffix = "${mod_release_type}".toUpperCase()
+	}
 
-        return code.toString().trim().split('-')[0]
-    }
+	def currentGitTag = "${prefix}${mod_version}${suffix}"
 
-	// def previousGitTag = ''
+	try {
+		def code = new ByteArrayOutputStream()
 
-    task gitChangelogTask(type: se.bjurr.gitchangelog.plugin.gradle.GitChangelogTask) {
+		exec {
+			commandLine 'git', 'describe', '--abbrev=0', '--tags', '--exclude', currentGitTag
+			standardOutput code
+		}
+
+		previousGitTag = code.toString().trim()
+	} catch(e) {
+		previousGitTag = ''
+	}
+
+	task gitChangelogTask(type: se.bjurr.gitchangelog.plugin.gradle.GitChangelogTask) {
         file = file("CHANGELOG.md")
         fromRepo = file('.')
         fromRef = "${previousGitTag}"
         toRef = "v${mod_version}"
         templateContent = file('.github/changelog.mustache').text
-		        .replace('{mod_version}', "${mod_version}")
+		        .replace('{current_tag}', "${currentGitTag}")
 		        .replace('{mod_git_url}', "${mod_git_url}")
 		        .replace('{last_tag}', "${previousGitTag}")
     }
