--- a/gradle.properties
+++ b/gradle.properties
@@ -10,3 +10,18 @@ mod_release_type=release
 mod_curseforge_id=579564
 mod_modrinth_id=A0nfCqYw
 mod_git_url=https://github.com/ApexStudios-Dev/FantasyFurniture
+
+minecraft_version=1.18.2
+forge_version=40.1.52
+
+registrate_version=1.2.5+581c39e
+registrate_package=com.tterrag.registrate
+
+commonality_mod_id=commonality
+commonality_version=1.1.1
+
+apexcore_mod_id=apexcore
+apexcore_version=4.6.0
+
+jei_version=9.7.0.195
+ctm_version=1.1.4+4
