--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,51 +1,45 @@
 modLoader="javafml"
-loaderVersion="${forge_version_range}"
+loaderVersion="[40,)"
 license="GNU General Public License v3.0"
-issueTrackerURL="${mod_git_url}/issues"
+issueTrackerURL="https://github.com/ApexStudios-Dev/FantasyFurniture/issues"
 
 [[mods]]
-	modId="${mod_id}"
-	version="${mod_version}"
-	displayName="${mod_name}"
+	modId="fantasyfurniture"
+	version="${file.jarVersion}"
+	displayName="Fantasy's Furniture"
 	updateJSONURL="https://raw.githubusercontent.com/ApexStudios-Dev/Version/master/fantasyfurniture.json"
 	displayURL="https://www.curseforge.com/minecraft/mc-mods/fantasys-furniture"
 	logoFile="banner.png"
 	credits="Apex - Programming, FantasyGaming - Texture Artist"
-	authors="${mod_authors}"
+	authors="Apex, FantasyGaming"
 	description="Mod requested by Fantasy which adds varying sets of furniture to your Minecraft world."
 
-[[dependencies.${mod_id}]]
+[[dependencies.fantasyfurniture]]
 	modId="forge"
 	mandatory=true
-	versionRange="${forge_version_range}"
+	versionRange="[40,)"
 	ordering="AFTER"
 	side="BOTH"
-[[dependencies.${mod_id}]]
+[[dependencies.fantasyfurniture]]
 	modId="minecraft"
 	mandatory=true
-	versionRange="${minecraft_version_range}"
+	versionRange="[1.18.2,)"
 	ordering="AFTER"
 	side="BOTH"
-[[dependencies.${mod_id}]]
-	modId="${registrator_mod_id}"
+[[dependencies.fantasyfurniture]]
+	modId="apexcore"
 	mandatory=true
-	versionRange="${registrator_version_range}"
+	versionRange="[1.18.2,)"
 	ordering="AFTER"
 	side="BOTH"
-[[dependencies.${mod_id}]]
-	modId="${apexcore_mod_id}"
-	mandatory=true
-	versionRange="${apexcore_version_range}"
-	ordering="AFTER"
-	side="BOTH"
-[[dependencies.${mod_id}]]
-	modId="${jei_mod_id}"
+[[dependencies.fantasyfurniture]]
+	modId="jei"
 	mandatory=false
-	versionRange="${jei_version_range}"
+	versionRange="[9.5.+,)"
 	ordering="AFTER"
 	side="BOTH"
-[[dependencies.${mod_id}]]
-	modId="${ctm_mod_id}"
+[[dependencies.fantasyfurniture]]
+	modId="ctm"
 	mandatory=false
 	versionRange="*" # ctm versions are funky, just allow all versions
 	ordering="AFTER"
