--- a/gradle.properties
+++ b/gradle.properties
@@ -11,17 +11,17 @@ mod_curseforge_id=579564
 mod_modrinth_id=A0nfCqYw
 mod_git_url=https://github.com/ApexStudios-Dev/FantasyFurniture
 
-minecraft_version=1.18.2
-forge_version=40.1.52
+minecraft_version=1.19
+forge_version=41.0.64
 
-registrate_version=1.2.6+2c6a0ad
+registrate_version=1.1.3
 registrate_package=com.tterrag.registrate
 
 commonality_mod_id=commonality
-commonality_version=1.2.0
+commonality_version=2.0.0
 
 apexcore_mod_id=apexcore
-apexcore_version=4.8.0
+apexcore_version=5.0.0
 
-jei_version=9.7.0.195
-ctm_version=1.1.4+4
+jei_version=11.0.0.206
+# ctm_version=1.1.4+4
