--- a/build.gradle
+++ b/build.gradle
@@ -1,27 +1,16 @@
-buildscript {
-	repositories {
-		maven { url 'https://maven.minecraftforge.net' }
-		maven { url 'https://repo.spongepowered.org/repository/maven-public/' }
-		mavenCentral()
-	}
-	dependencies {
-		classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
-		classpath 'org.spongepowered:mixingradle:0.7.+'
-	}
-}
-
 plugins {
+	id 'java'
+	id 'eclipse'
+	id 'idea'
+	id 'maven-publish'
+
 	id 'com.github.johnrengelman.shadow' version '7.1.2'
 	id 'com.matthewprenger.cursegradle' version '1.4.0'
 	id 'com.modrinth.minotaur' version '2.+'
 	id 'se.bjurr.gitchangelog.git-changelog-gradle-plugin' version '1.71.8'
+	id 'net.minecraftforge.gradle' version '5.1.+'
+	id 'org.spongepowered.mixin' version '0.7.+'
 }
-
-apply plugin: 'net.minecraftforge.gradle'
-apply plugin: 'org.spongepowered.mixin'
-apply plugin: 'eclipse'
-apply plugin: 'idea'
-apply plugin: 'maven-publish'
 
 version = "${minecraft_version}-${mod_version}"
 group = "${mod_base_package}"
@@ -30,6 +19,9 @@ archivesBaseName = "${mod_id}"
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
 configurations {
+	library
+	implementation.extendsFrom library
+
 	shade
 }
 
@@ -95,6 +87,12 @@ minecraft {
 	}
 }
 
+minecraft.runs.all {
+	lazyToken('minecraft_classpath') {
+		configurations.library.copyRecursive().resolve().collect { it.absolutePath }.join(File.pathSeparator)
+	}
+}
+
 if(file("./src/main/resources/${mod_id}.mixins.json").exists()) {
 	mixin {
 		add sourceSets.main, "${mod_id}.refmap.json"
@@ -126,13 +124,14 @@ dependencies {
 	minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
 	annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
 
-	compileOnly fg.deobf("mezz.jei:jei-${minecraft_version}:${jei_version}:api")
-	runtimeOnly fg.deobf("mezz.jei:jei-${minecraft_version}:${jei_version}")
+	compileOnly fg.deobf("mezz.jei:jei-${minecraft_version}-common-api:${jei_version}")
+	compileOnly fg.deobf("mezz.jei:jei-${minecraft_version}-forge-api:${jei_version}")
+	runtimeOnly fg.deobf("mezz.jei:jei-${minecraft_version}-forge:${jei_version}")
 
-	compileOnly fg.deobf("team.chisel.ctm:CTM:${minecraft_version}-${ctm_version}:api")
-	runtimeOnly fg.deobf("team.chisel.ctm:CTM:${minecraft_version}-${ctm_version}")
+	// compileOnly fg.deobf("team.chisel.ctm:CTM:${minecraft_version}-${ctm_version}:api")
+	// runtimeOnly fg.deobf("team.chisel.ctm:CTM:${minecraft_version}-${ctm_version}")
 
-	implementation fg.deobf("${registrate_package}:registrate-apex:MC${minecraft_version}-${registrate_version}")
+	implementation fg.deobf("${registrate_package}:Registrate:MC${minecraft_version}-${registrate_version}")
 	implementation fg.deobf("${mod_base_package}:${commonality_mod_id}:${minecraft_version}-${commonality_version}")
 	implementation fg.deobf("${mod_base_package}:${apexcore_mod_id}:${minecraft_version}-${apexcore_version}:slim")
 }
@@ -143,15 +142,8 @@ task sourcesJar(type: Jar, dependsOn: classes) {
 	from sourceSets.main.resources
 }
 
-task deobfJar(type: Jar) {
-	classifier 'deobf'
-	exclude '**/*bbmodel'
-	from sourceSets.main.output
-}
-
 jar {
 	classifier 'slim'
-	exclude '**/*bbmodel'
 	from sourceSets.main.output.classesDirs
 	from sourceSets.main.output.resourcesDir
 }
@@ -160,13 +152,11 @@ shadowJar {
 	classifier ''
 	configurations = [ project.configurations.shade ]
 	relocate "${registrate_package}", "xyz.apex.repack.${registrate_package}"
-	exclude '**/*bbmodel'
 }
 
 artifacts {
 	archives jar
 	archives sourcesJar
-	archives deobfJar
 	archives shadowJar
 }
 
@@ -248,8 +238,6 @@ if(System.getenv('APEX_MODS_MAVEN_USERNAME') != null && System.getenv('APEX_MODS
 
 				artifact jar
 				artifact sourcesJar
-				artifact deobfJar
-				artifact shadowJar
 			}
 		}
 		repositories {
@@ -273,8 +261,6 @@ if(System.getenv('APEX_MODS_MAVEN_USERNAME') != null && System.getenv('APEX_MODS
 				version = "${minecraft_version}-${mod_version}"
 				artifact jar
 				artifact sourcesJar
-				artifact deobfJar
-				artifact shadowJar
 			}
 		}
 		repositories {
@@ -299,9 +285,7 @@ if(System.getenv('CURSEFORGE_TOKEN') != null) {
 			}
 
 			mainArtifact shadowJar
-			addArtifact jar
 			addArtifact sourcesJar
-			addArtifact deobfJar
 		}
 
 		options {
@@ -320,7 +304,7 @@ if(System.getenv('MODRINTH_TOKEN') != null) {
 		versionName = "${mod_name}-${minecraft_version}-${mod_version}"
 		versionType = "${mod_release_type}"
 		uploadFile = shadowJar
-		additionalFiles = [ jar, sourcesJar, deobfJar ]
+		additionalFiles = [ sourcesJar ]
 		gameVersions = [ "${minecraft_version}" ]
 		changelog = file('CHANGELOG.md').text
 		loaders = [ 'forge' ]
