--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,5 +1,5 @@
 modLoader="javafml"
-loaderVersion="[40,)"
+loaderVersion="[41,)"
 license="GNU General Public License v3.0"
 issueTrackerURL="https://github.com/ApexStudios-Dev/FantasyFurniture/issues"
 
@@ -17,25 +17,25 @@ issueTrackerURL="https://github.com/ApexStudios-Dev/FantasyFurniture/issues"
 [[dependencies.fantasyfurniture]]
 	modId="forge"
 	mandatory=true
-	versionRange="[40,)"
+	versionRange="[41,)"
 	ordering="AFTER"
 	side="BOTH"
 [[dependencies.fantasyfurniture]]
 	modId="minecraft"
 	mandatory=true
-	versionRange="[1.18.2,)"
+	versionRange="[1.19,1.20)"
 	ordering="AFTER"
 	side="BOTH"
 [[dependencies.fantasyfurniture]]
 	modId="apexcore"
 	mandatory=true
-	versionRange="[1.18.2,)"
+	versionRange="[1.19,1.20)"
 	ordering="AFTER"
 	side="BOTH"
 [[dependencies.fantasyfurniture]]
 	modId="jei"
 	mandatory=false
-	versionRange="[9.5.+,)"
+	versionRange="[11.0.+,)"
 	ordering="AFTER"
 	side="BOTH"
 [[dependencies.fantasyfurniture]]
