--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.daemon=false
 
 mod_id=fantasyfurniture
 mod_name=Fantasy's Furniture
-mod_version=3.5.0
+mod_version=4.0.0
 mod_base_package=xyz.apex.forge
 mod_authors=Apex, FantasyGaming
 mod_release_type=release
@@ -12,16 +12,17 @@ mod_modrinth_id=A0nfCqYw
 mod_git_url=https://github.com/ApexStudios-Dev/FantasyFurniture
 
 minecraft_version=1.19
-forge_version=41.0.64
+forge_version=41.0.91
 
 registrate_version=1.1.3
 registrate_package=com.tterrag.registrate
 
 commonality_mod_id=commonality
-commonality_version=2.0.0
+commonality_version=2.1.1
 
 apexcore_mod_id=apexcore
-apexcore_version=5.0.1
+apexcore_version=5.1.0
+apexcore_version_range=[5.0.0,6.0.0)
 
 jei_version=11.0.0.206
 # ctm_version=1.1.4+4
