--- a/build.gradle
+++ b/build.gradle
@@ -142,6 +142,12 @@ dependencies {
 	implementation fg.deobf("${mod_base_package}:${apexcore_mod_id}-${minecraft_version}:${apexcore_version}:slim")
 
 	jarJar(group: "${mod_base_package}", name: "${apexcore_mod_id}-${minecraft_version}", version: "${apexcore_version_range}")
+
+	compileOnly "xyz.apex.java.utility:JavaUtilities:${java_utilities_version}:api"
+	compileOnly "xyz.apex.java.utility:JavaUtilities:${java_utilities_version}:api-sources"
+	compileOnly "xyz.apex.java.utility:JavaUtilities:${java_utilities_version}:api-javadoc"
+	runtimeOnly "xyz.apex.java.utility:JavaUtilities:${java_utilities_version}"
+	library "xyz.apex.java.utility:JavaUtilities:${java_utilities_version}"
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
