--- a/gradle.properties
+++ b/gradle.properties
@@ -26,3 +26,6 @@ apexcore_version_range=[5.2.1,6.0.0)
 
 jei_version=11.0.0.211
 # ctm_version=1.1.4+4
+
+java_utilities_version=4.0.1
+java_utilities_version_range=[4.0.0,5.0.0)
