--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,9 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     steps:
+      - name: Install JQ
+        uses: sudo apt-get install jq -y
+
       - name: Checkout Repository
         uses: actions/checkout@v3
 
@@ -57,8 +60,15 @@ jobs:
         if: ${{ matrix.os == 'ubuntu-latest' }}
         run: chmod +x ./gradlew
 
+      - name: Give RenderTypes script Execute Permissions
+        if: ${{ matrix.os == 'ubuntu-latest' }}
+        run: chmod +x ./render_types.sh
+
       - name: Generate Mod Data & Asset Files
         run: ./gradlew data
+
+     - name: Process model files (RenderTypes)
+        run: ./render_types.sh
 
       - name: Generate Changelog File
         run: ./gradlew gitChangelogTask
